[project]
name = "skyreels-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.1.1",
    "bitsandbytes==0.45.0",
    "diffusers",
    "gradio>=5.3.0",
    "imageio-ffmpeg==0.5.1",
    "imageio==2.36.1",
    "nvtx==0.2.10",
    "opencv-python==4.10.0.84",
    "optimum[quanto]>=1.24.0",
    "para-attn",
    "sageattention==1.0.6",
    "torch==2.5.1",
    "torchao==0.7.0",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "transformers==4.46.3",
    "xformers==0.0.29.post1",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git", rev = "464374fb87610c53b2cf81e08d3df628fada3ce4" }
para-attn = { git = "https://github.com/Howe2018/ParaAttention.git" }
